--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,9 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
+  region: ap-southeast-1
   bucket: flxibl-dev
-
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
