--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "tom-select": "^1.1.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
